link the css & js files

--- a/counter.html
+++ b/counter.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Count Up Section Counter</title>
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="row">
@@ -26,5 +27,6 @@
         </div>
       </div> 
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
